--- a/package.json
+++ b/package.json
@@ -3,10 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.16.1",
+    "bootstrap": "next",
+    "font-awesome": "^4.7.0",
+    "lodash": "^4.17.4",
+    "mobx-react": "^4.1.8",
+    "prop-types": "^15.5.10",
     "react": "^15.5.4",
+    "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
     "react-hot-loader": "next",
     "react-router": "3.x",
+    "react-router-bootstrap": "^0.24.2",
+    "shorti": "^1.2.6",
+    "slug": "^0.9.1",
     "styled-components": "^1.4.6"
   },
   "devDependencies": {
